Export selected files as ZIP archive

--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -65,17 +65,18 @@
 				</p>
 				<ul class="repository">
 					<li><a href="amc.html">Automated Media Center</a></li>
-					<li><a href="forums/viewtopic.php?p=204#p204">Fetch artwork and nfo files for TV Shows</a></li>
-					<li><a href="forums/viewtopic.php?p=205#p205">Fetch artwork and nfo files for Movies</a></li>
-					<li><a href="forums/viewtopic.php?p=8871#p8871">Fetch subtitles for all files</a></li>
+					<li><a href="forums/viewtopic.php?p=204#p204">Fetch artwork and nfo files for TV shows</a></li>
+					<li><a href="forums/viewtopic.php?p=205#p205">Fetch artwork and nfo files for movies</a></li>
+					<li><a href="forums/viewtopic.php?p=8871#p8871">Fetch missing subtitles for all files</a></li>
 					<li><a href="forums/viewtopic.php?p=1341#p1341">Delete left behind clutter files</a></li>
-					<li><a href="forums/viewtopic.php?p=2459#p2459">Query Rename History</a></li>
-					<li><a href="forums/viewtopic.php?p=5394#p5394">View or Clear Extended Attributes</a></li>
-					<li><a href="forums/viewtopic.php?p=53#p53">Export Media Index to CSV file</a></li>
-					<li><a href="forums/viewtopic.php?p=12396#p12396">Calculate CRC32 and Verify File Integrity</a></li>
-					<li><a href="forums/viewtopic.php?p=19132#p19132">Find Missing Episodes</a></li>
-					<li><a href="forums/viewtopic.php?p=23171#p23171">Find Duplicate Movie or Episode files</a></li>
-					<li><a href="forums/viewtopic.php?p=44992#p44992">Write Embedded Tags</a></li>
+					<li><a href="forums/viewtopic.php?p=2459#p2459">Query internal rename history</a></li>
+					<li><a href="forums/viewtopic.php?p=5394#p5394">View or clear extended attributes</a></li>
+					<li><a href="forums/viewtopic.php?p=53#p53">Export media index to CSV file</a></li>
+					<li><a href="forums/viewtopic.php?p=54881#p54881">Export selected files as ZIP archive</a></li>
+					<li><a href="forums/viewtopic.php?p=12396#p12396">Compute CRC32 and verify file integrity</a></li>
+					<li><a href="forums/viewtopic.php?p=19132#p19132">Find missing episodes</a></li>
+					<li><a href="forums/viewtopic.php?p=23171#p23171">Find duplicate movie or episode files</a></li>
+					<li><a href="forums/viewtopic.php?p=44992#p44992">Write embedded tags</a></li>
 				</ul>
 
 				<h3>Example Scripts</h3>
