Added {country} binding to unify TheMovieDB::TV binding {info.country} and TheMovieDB binding {info.productionCountries} under a common moniker

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -396,6 +396,12 @@
 						<td><kbd class="type">Language*</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">country</kbd></td>
+						<td>origin country</td>
+						<td>KR</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">runtime</kbd></td>
 						<td>movie / episode runtime</td>
 						<td>162</td>
