Follow us on Twitter or join our Discord channel.

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -226,7 +226,7 @@
 				<p>
 					The project is continuously seeking for improvements, so any kind of <a href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
 					and if there's any questions or problems just start posting in the <a href="forums/">forums</a> or check the <a href="manual.html">FAQ</a>.
-					We're social as well. Follow us on <a href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a href="https://www.facebook.com/filebot">facebook</a> or join our <a href="channel.html">Discord </a> channel.
+					We're social as well. Follow us on <a href="https://twitter.com/filebot_renamer">Twitter</a> or join our <a href="channel.html">Discord </a> channel.
 				</p>
 			</div>
 		</div>
