--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -151,7 +151,7 @@
 						</div>
 						Download subtitles from <a href="https://www.opensubtitles.org/">OpenSubtitles</a>
 					</li>
-					<li>Find perfectly matching <a href="forums/viewtopic.php?t=2615">subtitles by movie hash</a></li>
+					<li>Find perfectly matching subtitles by <a href="forums/viewtopic.php?t=2615">movie hash</a></li>
 					<li>Upload subtitles with movie hash</li>
 					<li>Integrated subtitle viewer for <a title="SubRip" href="https://en.wikipedia.org/wiki/SubRip">srt</a>, <a title="Advanced SubStation Alpha" href="https://en.wikipedia.org/wiki/SubStation_Alpha">ass</a>, <a title="MicroDVD and SubViewer" href="https://en.wikipedia.org/wiki/MicroDVD">sub</a> and <a title="Synchronized Accessible Media Interchange" href="https://en.wikipedia.org/wiki/SAMI">sami</a> files</li>
 					<li>Transcode subtitle format and character encoding</li>
