Update ICU link

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -902,7 +902,7 @@
 					<small class="comment">(e.g. &quot;カタカナ&quot; ➔ &quot;katakana&quot;)</small>
 				</p>
 				<p>
-					<code><kbd class="type">String</kbd>.<kbd class="method">transliterate</kbd>(<kbd class="string">identifier</kbd>)</code>Apply any <a href="http://userguide.icu-project.org/transforms/general">ICU script transliteration</a>.
+					<code><kbd class="type">String</kbd>.<kbd class="method">transliterate</kbd>(<kbd class="string">identifier</kbd>)</code>Apply any <a href="https://unicode-org.github.io/icu/userguide/transforms/general/#transliterator-identifiers">ICU script transliteration</a>.
 					<small class="comment">(e.g. &quot;中国&quot; ➔ &quot;zhōng guó&quot;)</small>
 				</p>
 			</div>
