--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -552,6 +552,12 @@
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">ct</kbd></td>
+						<td>media creation date</td>
+						<td>&lt;date and time&gt;</td>
+						<td><kbd class="type">Instant</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">vs</kbd></td>
 						<td><a href="forums/viewtopic.php?t=11265">source class</a></td>
 						<td>BluRay</td>
