Rename {ct} to {dt} for backwards compatibility

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -552,7 +552,7 @@
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr>
-						<td><kbd class="variable">ct</kbd></td>
+						<td><kbd class="variable">dt</kbd></td>
 						<td>media creation date</td>
 						<td>&lt;date and time&gt;</td>
 						<td><kbd class="type">Instant</kbd></td>
