Added {tags} docs page

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -571,7 +571,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">tags</kbd></td>
-						<td>movie tags</td>
+						<td><a href="forums/viewtopic.php?t=12668">movie tags</a></td>
 						<td>[Extended Edition]</td>
 						<td><kbd class="type">String*</kbd></td>
 					</tr>
