--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<base href="@{link.site.index}">
 
 	<title>FileBot Command-line Interface</title>
 	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
@@ -18,7 +17,7 @@
 				<ul>
 					<li><a href="forums/">Forums</a></li>
 					<li><a href="manual.html">FAQ</a></li>
-					<li><a href="#download">Download</a></li>
+					<li><a href="download.html">Download</a></li>
 				</ul>
 			</div>
 		</div>
