Add String.validateFileName() to top-level docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -840,6 +840,11 @@
 					<small class="comment">(e.g. &quot;V_MPEG4/ISO/AVC&quot; ➔ &quot;V_MPEG4.ISO.AVC&quot;)</small>
 				</p>
 				<p>
+					<code><kbd class="type">String</kbd>.<kbd class="method">validateFileName</kbd>()</code>
+					Strip special characters.
+					<small class="comment">(e.g. &quot;.hack&quot; ➔ &quot;hack&quot;)</small>
+				</p>
+				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">lower</kbd>()</code>
 					Convert all characters to lower case.
 					<small class="comment">(e.g. &quot;Firelfy&quot; ➔ &quot;firefly&quot;)</small>
