Add command-line only bindings to the top-level binding docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -773,6 +773,30 @@
 						<td><kbd class="type">[String:String]</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">home</kbd></td>
+						<td>user home folder</td>
+						<td>&lt;folder path&gt;</td>
+						<td><kbd class="type">File</kbd></td>
+					</tr>
+					<tr>
+						<td><kbd class="variable">output</kbd></td>
+						<td><a href="cli.html#arguments">--output folder</a></td>
+						<td>&lt;folder path&gt;</td>
+						<td><kbd class="type">File</kbd></td>
+					</tr>
+					<tr>
+						<td><kbd class="variable">defines</kbd></td>
+						<td><a href="cli.html#arguments">--def parameters</a></td>
+						<td>&lt;script parameters&gt;</td>
+						<td><kbd class="type">[String:String]</kbd></td>
+					</tr>
+					<tr>
+						<td><kbd class="variable">label</kbd></td>
+						<td><a href="cli.html#arguments">--def label value</a></td>
+						<td>&lt;label parameter&gt;</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">self</kbd></td>
 						<td>match bindings</td>
 						<td>&lt;bindings&gt;</td>
