--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -931,6 +931,11 @@
 					<small class="comment">(e.g. &quot;Star Wars: Episode 4&quot; ➔ &quot;Star Wars: Episode IV&quot;)</small>
 				</p>
 				<p>
+					<code><kbd class="type">String</kbd>.<kbd class="method">clean</kbd>()</code>
+					Strip invalid characters and release information.
+					<small class="comment">(e.g. &quot;Sissi: The Young Empress&quot; ➔ &quot;Sissi The Young Empress&quot;)</small>
+				</p>
+				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">ascii</kbd>()</code>
 					Convert Unicode characters to ASCII.
 					<small class="comment">(e.g. &quot;カタカナ&quot; ➔ &quot;katakana&quot;)</small>
