--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -25,6 +25,9 @@
 	<link rel="stylesheet" href="review.css" type="text/css">
 	<link rel="stylesheet" href="purchase.css" type="text/css">
 
+	<link rel="preload" href="fonts/handwriting.ttf" as="font" type="font/ttf">
+	<link rel="preload" href="fonts/code.ttf" as="font" type="font/ttf">
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
 	<script src="index.js"></script>
