Add file hash links

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -152,10 +152,10 @@
 								<img class="screenshot" alt="Subtitles" width="150" height="118" src="screenshots/small/panel.subtitle.png" />
 							</a>
 						</div>
-						Download subtitles from <a href="https://www.opensubtitles.org/">OpenSubtitles</a>
+						Fetch subtitles from <a href="https://www.opensubtitles.org/">OpenSubtitles</a>
 					</li>
-					<li>Find perfectly matching subtitles by <a href="forums/viewtopic.php?t=2615">movie hash</a></li>
-					<li>Upload subtitles with movie hash</li>
+					<li>Find perfectly matching subtitles via <a href="forums/viewtopic.php?t=2615">file hash</a></li>
+					<li>Upload subtitles with <a href="forums/viewtopic.php?t=2615">file hash</a></li>
 					<li>Integrated subtitle viewer for <a title="SubRip" href="https://en.wikipedia.org/wiki/SubRip">srt</a>, <a title="Advanced SubStation Alpha" href="https://en.wikipedia.org/wiki/SubStation_Alpha">ass</a>, <a title="MicroDVD and SubViewer" href="https://en.wikipedia.org/wiki/MicroDVD">sub</a> and <a title="Synchronized Accessible Media Interchange" href="https://en.wikipedia.org/wiki/SAMI">sami</a> files</li>
 					<li>Transcode subtitle format and character encoding</li>
 				</ul>
