[SNIPPET] Sort into A-Z folders

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -300,7 +300,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">az</kbd></td>
-						<td>sort collection letter</td>
+						<td><a href="forums/viewtopic.php?t=910">sort collection letter</a></td>
 						<td>A</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
