Add -no-history docs link

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -340,6 +340,7 @@
 					<tr>
 						<td><kbd class="option">-no-history</kbd></td>
 						<td>disable history</td>
+						<td><a href="forums/viewtopic.php?t=9787">disable history</a></td>
 						<td></td>
 					</tr>
 					<tr>
