[DOCS] --conflict resolution for duplicate file paths

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -172,8 +172,8 @@
 					</tr>
 					<tr>
 						<td><kbd class="option">--conflict</kbd></td>
-						<td>conflict resolution</td>
-						<td>override | skip | auto | index | fail</td>
+						<td><a href="forums/viewtopic.php?t=12891">conflict resolution</a></td>
+						<td><a href="forums/viewtopic.php?t=12891">skip | override | auto | index | fail</a></td>
 					</tr>
 					<tr>
 						<td><kbd class="option">--filter</kbd></td>
