Airdate | Absolute | DVD | Date and Title

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -158,7 +158,7 @@
 					<tr>
 						<td><kbd class="option">--order</kbd></td>
 						<td>episode numbering</td>
-						<td>Airdate | Absolute | DVD</td>
+						<td>Airdate | Absolute | DVD | Date and Title</td>
 					</tr>
 					<tr>
 						<td><kbd class="option">--format</kbd></td>
