Fix column duplicate

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -150,7 +150,7 @@
 									<td>AcoustID | ID3 <small class="comment">(Music Mode)</small></td>
 								</tr>
 								<tr>
-									<td><a href="forums/viewtopic.php?t=2072">File | Exif | Xattr</a> <small class="comment">(Plain File Mode)</small></td>
+									<td><a href="forums/viewtopic.php?t=2072">file | exif | xattr</a> <small class="comment">(Plain File Mode)</small></td>
 								</tr>
 							</table>
 						</td>
@@ -339,7 +339,6 @@
 					</tr>
 					<tr>
 						<td><kbd class="option">-no-history</kbd></td>
-						<td>disable history</td>
 						<td><a href="forums/viewtopic.php?t=9787">disable history</a></td>
 						<td></td>
 					</tr>
