--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -274,12 +274,30 @@
 					<tr>
 						<td><kbd class="option">-list</kbd></td>
 						<td>print episode list</td>
-						<td><a href="forums/viewtopic.php?t=12553">-rename</a> <small class="comment">(Linear Rename Mode)</small></td>
+						<td>
+							<table>
+								<tr>
+									<td>-list <small class="comment">(Print Mode)</small></td>
+								</tr>
+								<tr>
+									<td><a href="forums/viewtopic.php?t=12553">-list -rename</a> <small class="comment">(Linear Rename Mode)</small></td>
+								</tr>
+							</table>
+						</td>
 					</tr>
 					<tr>
 						<td><kbd class="option">-find</kbd></td>
-						<td><a href="forums/viewtopic.php?t=12622">print file paths</a></td>
-						<td><a href="forums/viewtopic.php?t=12622">-exec</a> <small class="comment">(Find Exec Mode)</small></td>
+						<td>print file paths</td>
+						<td>
+							<table>
+								<tr>
+									<td>-find <small class="comment">(Print Mode)</small></td>
+								</tr>
+								<tr>
+									<td><a href="forums/viewtopic.php?t=12622">-find -exec</a> <small class="comment">(Find Exec Mode)</small></td>
+								</tr>
+							</table>
+						</td>
 					</tr>
 					<tr>
 						<td><kbd class="option">-mediainfo</kbd></td>
