Use "Manual" instead of "FAQ" to see if that helps user click on it and read it

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -14,7 +14,7 @@
 			<div>
 				<ul>
 					<li><a href="forums/">Forums</a></li>
-					<li><a href="manual.html">FAQ</a></li>
+					<li><a href="manual.html">Manual</a></li>
 					<li><a href="download.html">Download</a></li>
 				</ul>
 			</div>
