--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -39,7 +39,7 @@
 			<div>
 				<ul>
 					<li><a href="forums/">Forums</a></li>
-					<li><a href="manual.html">FAQ</a></li>
+					<li><a href="manual.html">Manual</a></li>
 					<li><a href="#download">Download</a></li>
 				</ul>
 			</div>
