--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -3,19 +3,6 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-	<meta name="description" content="@{package.description}" />
-	<meta name="keywords" content="@{package.tags}" />
-	<meta name="author" content="@{package.company}" />
-
-	<meta itemprop="name" content="@{application.name} - @{package.synopsis}" />
-	<meta itemprop="description" content="@{package.description}" />
-	<meta itemprop="image" content="@{link.image.logo}" />
-
-	<meta property="og:title" content="@{application.name}" />
-	<meta property="og:type" content="product" />
-	<meta property="og:url" content="@{link.site.index}" />
-	<meta property="og:image" content="@{link.image.logo}" />
-
 	<title>@{application.name} - @{package.synopsis}</title>
 	<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 	<link rel="stylesheet" href="base.css" type="text/css">
@@ -28,10 +15,24 @@
 	<link rel="preload" href="fonts/handwriting.ttf" as="font" type="font/ttf">
 	<link rel="preload" href="fonts/code.ttf" as="font" type="font/ttf">
 	<link rel="preload" href="fonts/icon.ttf" as="font" type="font/ttf">
+	<link rel="preload" href="reviews.json" as="fetch" type="application/json">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
 	<script src="index.js"></script>
+
+	<meta name="description" content="@{package.description}" />
+	<meta name="keywords" content="@{package.tags}" />
+	<meta name="author" content="@{package.company}" />
+
+	<meta itemprop="name" content="@{application.name} - @{package.synopsis}" />
+	<meta itemprop="description" content="@{package.description}" />
+	<meta itemprop="image" content="@{link.image.logo}" />
+
+	<meta property="og:title" content="@{application.name}" />
+	<meta property="og:type" content="product" />
+	<meta property="og:url" content="@{link.site.index}" />
+	<meta property="og:image" content="@{link.image.logo}" />
 </head>
 <body>
 	<div class="page">
