--- a/www.filebot.net/getting-started/embed.html
+++ b/www.filebot.net/getting-started/embed.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.css" crossorigin="anonymous">
+		<title>Getting Started</title>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js" integrity="sha384-nUTmcZGvHkqUWk8Vex26NS0QsXEK8QAPLIZ22xLiy7OLCHX1QUbIqptlSLnH+aOg" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.js" integrity="sha384-2b7KAxHmRxLZu0x5c6OMtaUOSns5VJ666Fe4F7u9OjRdY6SSEvFLVDxIV+u+/hYp" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.css" integrity="sha384-C9txWX+EICTgr4AN/wWQhKhdd/BsXl1lVS/E+daOWUZn6Mjm5oHGeEEU0jxP55oV" crossorigin="anonymous">
+
 		<script src="index.js"></script>
 		<link rel="stylesheet" href="index.css">
-		<title>Getting Started</title>
 	</head>
 	<body onload="runGalleria()">
 		<div class="galleria"></div>
