--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -12,10 +12,9 @@
 	<link rel="stylesheet" href="review.css" type="text/css">
 	<link rel="stylesheet" href="purchase.css" type="text/css">
 
-	<link rel="preload" href="fonts/handwriting.ttf" as="font" type="font/ttf">
-	<link rel="preload" href="fonts/code.ttf" as="font" type="font/ttf">
-	<link rel="preload" href="fonts/icon.ttf" as="font" type="font/ttf">
-	<link rel="preload" href="reviews.json" as="fetch" type="application/json">
+	<link rel="preload" href="fonts/handwriting.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="fonts/code.ttf" as="font" type="font/ttf" crossorigin>
+	<link rel="preload" href="fonts/icon.ttf" as="font" type="font/ttf" crossorigin>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
