--- a/www.filebot.net/reviews.html
+++ b/www.filebot.net/reviews.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="review.css" type="text/css">
 
+	<link rel="preload" href="fonts/handwriting.ttf" as="font" type="font/ttf" crossorigin>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="reviews.js"></script>
 
