Support deep link to a specific page via `#1..9` anchor

--- a/www.filebot.net/getting-started/index.html
+++ b/www.filebot.net/getting-started/index.html
@@ -11,8 +11,8 @@
 		<script src="index.js"></script>
 		<link rel="stylesheet" href="index.css">
 	</head>
-	<body onload="runGalleria()">
-		<img class="fullscreen" src="fullscreen.png" width="16" height="16" onclick="toggleFullScreen()" />
+	<body>
+		<img class="fullscreen" src="fullscreen.png" width="16" height="16" />
 		<div class="galleria"></div>
 	</body>
 </html>
