--- a/www.filebot.net/getting-started/embed.html
+++ b/www.filebot.net/getting-started/embed.html
@@ -11,7 +11,7 @@
 		<script src="index.js"></script>
 		<link rel="stylesheet" href="index.css">
 	</head>
-	<body onload="runGalleria()">
+	<body>
 		<div class="galleria"></div>
 	</body>
 </html>
