Prepare macOS installer links for arm64 / x86_64

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -45,7 +45,8 @@
 				<h2>FileBot for macOS</h2>
 				<ul class="list">
 					<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
-					<li>macOS portable app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
+					<!-- <li>macOS installer for Apple Silicon: <a href="@{link.release.prefix}.pkg">@{release}_arm64.pkg</a></li> -->
+					<!-- <li>macOS installer for Intel: <a href="@{link.release.prefix}.pkg">@{release}_x86_64.pkg</a></li> -->
 					<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
 				</ul>
 			</div>
