--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -184,6 +184,7 @@
 				<ul class="list">
 					<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
 					<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
+					<!-- <li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}_arm64.pkg</a> and <a href="@{link.release.prefix}.pkg">@{release}_x86_64.pkg</a></li> -->
 					<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
 					<li>Ubuntu / Debian package is available <a href="linux/apt.html">via APT</a></li>
 					<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a></li>
