--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -69,7 +69,7 @@
 			<div class="metrics"></div>
 
 			<p class="suggestion">
-				Please read to <a href="activate.html">How do I activate my license?</a> for details on license activation.
+				Please read <a href="activate.html">How do I activate my license?</a> for details on license activation.
 			</p>
 
 			<div class="footer">
