http://groovy-lang.org/syntax.html

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -40,7 +40,7 @@
 					You can define your own episode and movie naming schemes. Built-in bindings such as <a href="forums/viewtopic.php?t=4116">{plex}</a> can be used unmodified, or as a starting point for your own custom format.
 				</p>
 				<p>
-					Simple things are easy. Complex things are just as easy, if you're familiar with <a href="http://groovy-lang.org/">Groovy</a> scripting. There are <a href="#bindings">many bindings</a> that can serve as building blocks for you to write your own custom format tailored to your liking with ease.
+					Simple things are easy. Complex things are just as easy, if you're familiar with <a href="http://groovy-lang.org/syntax.html">Groovy</a> scripting. There are <a href="#bindings">many bindings</a> that can serve as building blocks for you to write your own custom format tailored to your liking with ease.
 				</p>
 				<p>
 					You will find <a href="forums/viewtopic.php?t=2">many examples</a> for all kinds of custom use cases. Ready for you to just copy &amp; paste,<br> and (optionally) customize to your needs.
