--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -37,7 +37,7 @@
 			<div class="section about column">
 				<h2>About</h2>
 				<p>
-					FileBot makes scripting and automation as easy as it gets. Write modern <a href="http://groovy-lang.org/">Groovy</a> code
+					FileBot makes scripting and automation as easy as it gets. Write modern <a href="http://groovy-lang.org/syntax.html">Groovy</a> code
 					instead of bothering with cumbersome <abbr title="Windows batch script">*.cmd</abbr> or <abbr title="Unix shell script">*.sh</abbr> scripts.
 					It's much more powerful and works the same on all operating systems.
 				</p>
