--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -600,7 +600,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">info</kbd></td>
-						<td>extended metadata</td>
+						<td><a href="forums/viewtopic.php?t=13007">extended metadata</a></td>
 						<td>&lt;all properties&gt;</td>
 						<td><kbd class="type">[String:Any]</kbd></td>
 					</tr>
