Add dedicated String.colon() example thread

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -856,7 +856,7 @@
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">colon</kbd>(<kbd class="string">replacement</kbd>)</code>
-					Replace all colons.
+					Find and <a href="forums/viewtopic.php?t=13019">replace colons</a>.
 					<small class="comment">(e.g. &quot;Sissi: The Young Empress&quot; ➔ &quot;Sissi - The Young Empress&quot;)</small>
 				</p>
 				<p>
