Fix PKG download links

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -183,8 +183,7 @@
 				<h2>Download</h2>
 				<ul class="list">
 					<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
-					<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
-					<!-- <li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}_arm64.pkg</a> and <a href="@{link.release.prefix}.pkg">@{release}_x86_64.pkg</a></li> -->
+					<li>macOS installer: <a href="@{link.release.prefix}_x64.pkg">@{release}_x64.pkg</a> or <a href="@{link.release.prefix}_arm64.pkg">@{release}_arm64.pkg</a></li>
 					<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
 					<li>Ubuntu / Debian package is available <a href="linux/apt.html">via APT</a></li>
 					<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a></li>
