--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -44,9 +44,8 @@
 				<img class="icon light" src="images/apple.logo.svg" alt="download" width="42" height="42" />
 				<h2>FileBot for macOS</h2>
 				<ul class="list">
-					<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
-					<!-- <li>macOS installer for Apple Silicon: <a href="@{link.release.prefix}.pkg">@{release}_arm64.pkg</a></li> -->
-					<!-- <li>macOS installer for Intel: <a href="@{link.release.prefix}.pkg">@{release}_x86_64.pkg</a></li> -->
+					<li>macOS installer for Apple Silicon: <a href="@{link.release.prefix}_arm64.pkg">@{release}_arm64.pkg</a></li>
+					<li>macOS installer for Intel: <a href="@{link.release.prefix}_x64.pkg">@{release}_x64.pkg</a></li>
 					<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
 				</ul>
 			</div>
