Run FileBot remotely and setup unattended automated workflows.

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -102,7 +102,7 @@
 					<li>Hit <span class="label">Download</span></li>
 				</ol>
 				<p>
-					<strong>Run FileBot on unattended automated systems.</strong> FileBot offers a simple <a title="Command-line Interface" href="cli.html">CLI</a> for common use cases, and a built-in <a href="script.html">scripting engine</a> for more complex tasks.
+					<strong>Run FileBot remotely and setup unattended automated workflows.</strong> FileBot offers a simple <a title="Command-line Interface" href="cli.html">CLI</a> for common use cases, and a built-in <a href="script.html">scripting engine</a> for more complex tasks.
 				</p>
 				<code><kbd class="cmd">filebot</kbd> <kbd class="option">-rename</kbd> <kbd class="argument">*.mkv</kbd></code>
 				<p>
