Re-organize previously organized files using local xattr metadata

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -149,7 +149,7 @@
 						<td>
 							<table>
 								<tr>
-									<td>TheTVDB | AniDB | TheMovieDB::TV <small class="comment">(Series Mode)</small></td>
+									<td>TheMovieDB::TV | TheTVDB | AniDB <small class="comment">(Series Mode)</small></td>
 								</tr>
 								<tr>
 									<td>TheMovieDB | OMDb <small class="comment">(Movie Mode)</small></td>
@@ -158,7 +158,13 @@
 									<td>AcoustID | ID3 <small class="comment">(Music Mode)</small></td>
 								</tr>
 								<tr>
-									<td><a href="forums/viewtopic.php?t=2072">file | exif | xattr</a> <small class="comment">(Plain File Mode)</small></td>
+									<td><a href="forums/viewtopic.php?t=13056">xattr</a> <small class="comment">(Local Xattr Mode)</small></td>
+								</tr>
+								<tr>
+									<td><a href="forums/viewtopic.php?t=2072">file</a> <small class="comment">(Plain File Mode)</small></td>
+								</tr>
+								<tr>
+									<td><a href="forums/viewtopic.php?t=2072">exif</a> <small class="comment">(Photo Mode)</small></td>
 								</tr>
 							</table>
 						</td>
@@ -219,7 +225,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="option">-r</kbd></td>
-						<td>traverse folders recursively</td>
+						<td>select files recursively</td>
 						<td></td>
 					</tr>
 					<tr>
