Added {acf} binding (e.g. DD5.1 or DDP5.1)

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -467,6 +467,12 @@
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">acf</kbd></td>
+						<td>audio channel format</td>
+						<td>DD5.1</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">af</kbd></td>
 						<td>audio channel count</td>
 						<td>6ch</td>
