[DOCS] {historic} file path bindings

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -600,7 +600,7 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">historic</kbd></td>
-						<td><a href="forums/viewtopic.php?p=2459#p2459">original path</a></td>
+						<td><a href="forums/viewtopic.php?t=13116">original path</a></td>
 						<td>&lt;bindings&gt;</td>
 						<td><kbd class="type">[String:Any]</kbd></td>
 					</tr>
