[DOCS] {hd} video definition class binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -552,8 +552,8 @@
 					</tr>
 					<tr>
 						<td><kbd class="variable">hd</kbd></td>
-						<td>UHD / HD / SD tag</td>
-						<td>HD</td>
+						<td><a href="forums/viewtopic.php?t=13117">video definition class</a></td>
+						<td>UHD</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr>
