Added {height} and {width} to naming docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -491,10 +491,16 @@
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr>
-						<td><kbd class="variable">dim</kbd></td>
-						<td>video dimensions</td>
-						<td>[1280, 720]</td>
-						<td><kbd class="type">Integer*</kbd></td>
+						<td><kbd class="variable">width</kbd></td>
+						<td>video width</td>
+						<td>3840</td>
+						<td><kbd class="type">Integer</kbd></td>
+					</tr>
+					<tr>
+						<td><kbd class="variable">height</kbd></td>
+						<td>video height</td>
+						<td>2160</td>
+						<td><kbd class="type">Integer</kbd></td>
 					</tr>
 					<tr>
 						<td><kbd class="variable">bitdepth</kbd></td>
