Add {object} match object to binding reference

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -305,6 +305,12 @@
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">object</kbd></td>
+						<td>match object</td>
+						<td>Firefly - 1x01 - Serenity</td>
+						<td><kbd class="type">Object</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">type</kbd></td>
 						<td>object type</td>
 						<td>Episode</td>
