Added {ct} file creation time (i.e. Last-Modified) binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -749,6 +749,12 @@
 						<td><kbd class="type">FileSize</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">ct</kbd></td>
+						<td>file creation date</td>
+						<td>&lt;date and time&gt;</td>
+						<td><kbd class="type">Instant</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">crc32</kbd></td>
 						<td><a href="forums/viewtopic.php?p=12396#p12396">CRC32 checksum</a></td>
 						<td>3E16AF40</td>
