[SNIPPET] Rounding numbers (for ratings)

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -857,7 +857,7 @@
 				</p>
 				<p>
 					<code><kbd class="type">Number</kbd>.<kbd class="method">round</kbd>(<kbd class="numeral">precision</kbd>, <kbd class="string">padding</kbd> = <kbd class="string">"0"</kbd>)</code>
-					Round decimal number to precision.
+					<a href="forums/viewtopic.php?t=194">Round decimal number</a> to precision.
 					<small class="comment">(e.g. &quot;3.14&quot; ➔ &quot;3.1&quot;)</small>
 				</p>
 				<p>
