--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -587,6 +587,12 @@
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">edition</kbd></td>
+						<td><a href="forums/viewtopic.php?t=12668">movie edition</a></td>
+						<td>Extended Edition</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">tags</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12668">movie tags</a></td>
 						<td>[Extended Edition]</td>
