Add {today} to the docs (added years ago but undocumented; useful for comparisons with airdates)

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -803,6 +803,12 @@
 						<td><kbd class="type">[String:String]</kbd></td>
 					</tr>
 					<tr>
+						<td><kbd class="variable">today</kbd></td>
+						<td>current date</td>
+						<td>2022-08-08</td>
+						<td><kbd class="type">Date</kbd></td>
+					</tr>
+					<tr>
 						<td><kbd class="variable">home</kbd></td>
 						<td>user home folder</td>
 						<td>&lt;folder path&gt;</td>
