--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -958,7 +958,7 @@
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">acronym</kbd>()</code>
-					Convert to acronym.
+					Convert to <a href="forums/viewtopic.php?t=182">acronym</a>.
 					<small class="comment">(e.g. &quot;Deep Space 9&quot; ➔ &quot;DS9&quot;)</small>
 				</p>
 				<p>
