--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -187,7 +187,7 @@
 					<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
 					<li>Ubuntu / Debian package is available <a href="linux/apt.html">via APT</a></li>
 					<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a></li>
-					<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
+					<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and ZYPPER</a></li>
 					<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for other Linux and FreeBSD devices</small></li>
 					<li>Windows packages are available <a href="windows/winget.html">via winget</a> and <a href="windows/scoop.html">via scoop</a></li>
 					<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
