[DEPRECATED] {pn} is deprecated. Please use {pc} instead.

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -258,13 +258,13 @@
 					</tr>
 					<tr id="pi">
 						<td><kbd class="variable">pi</kbd></td>
-						<td>movie part index</td>
+						<td>part index</td>
 						<td>1</td>
 						<td><kbd class="type">Integer</kbd></td>
 					</tr>
-					<tr id="pn">
-						<td><kbd class="variable">pn</kbd></td>
-						<td>movie part count</td>
+					<tr id="pc">
+						<td><kbd class="variable">pc</kbd></td>
+						<td>part count</td>
 						<td>2</td>
 						<td><kbd class="type">Integer</kbd></td>
 					</tr>
