Added {relativeFile} binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -688,6 +688,12 @@
 						<td>&lt;file paths&gt;</td>
 						<td><kbd class="type">File*</kbd></td>
 					</tr>
+					<tr id="relativeFile">
+						<td><kbd class="variable">relativeFile</kbd></td>
+						<td>relative library path</td>
+						<td>&lt;relative path&gt;</td>
+						<td><kbd class="type">File</kbd></td>
+					</tr>
 					<tr id="mediaFile">
 						<td><kbd class="variable">mediaFile</kbd></td>
 						<td>primary media file</td>
