[DOCS] {lang} and {subt} subtitle language tag

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -270,13 +270,13 @@
 					</tr>
 					<tr id="lang">
 						<td><kbd class="variable">lang</kbd></td>
-						<td>subtitle language</td>
+						<td><a href="forums/viewtopic.php?t=13519">subtitle language</a></td>
 						<td>eng</td>
 						<td><kbd class="type">Language</kbd></td>
 					</tr>
 					<tr id="subt">
 						<td><kbd class="variable">subt</kbd></td>
-						<td>subtitle tags</td>
+						<td><a href="forums/viewtopic.php?t=13519">subtitle tag</a></td>
 						<td>.eng.forced</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
