--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -186,13 +186,13 @@
 					</tr>
 					<tr id="di">
 						<td><kbd class="variable">di</kbd></td>
-						<td>duplicate index</td>
+						<td><a href="forums/viewtopic.php?t=9814">duplicate index</a></td>
 						<td>1</td>
 						<td><kbd class="type">Integer</kbd></td>
 					</tr>
 					<tr id="dc">
 						<td><kbd class="variable">dc</kbd></td>
-						<td>duplicate count</td>
+						<td><a href="forums/viewtopic.php?t=9814">duplicate count</a></td>
 						<td>2</td>
 						<td><kbd class="type">Integer</kbd></td>
 					</tr>
