Update doc links

--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -64,8 +64,7 @@
 				</p>
 				<ul class="repository">
 					<li><a href="amc.html">Automated Media Center</a></li>
-					<li><a href="forums/viewtopic.php?p=204#p204">Fetch artwork and nfo files for TV shows</a></li>
-					<li><a href="forums/viewtopic.php?p=205#p205">Fetch artwork and nfo files for movies</a></li>
+					<li><a href="forums/viewtopic.php?p=205#p205">Fetch artwork and NFO files</a></li>
 					<li><a href="forums/viewtopic.php?p=8871#p8871">Fetch missing subtitles for all files</a></li>
 					<li><a href="forums/viewtopic.php?p=1341#p1341">Delete left behind clutter files</a></li>
 					<li><a href="forums/viewtopic.php?p=2459#p2459">Query internal rename history</a></li>
