Add selected YouTube Video Tutorials to the Getting Started page

--- a/www.filebot.net/getting-started/embed.html
+++ b/www.filebot.net/getting-started/embed.html
@@ -3,15 +3,15 @@
 	<head>
 		<title>Getting Started</title>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js" integrity="sha384-nUTmcZGvHkqUWk8Vex26NS0QsXEK8QAPLIZ22xLiy7OLCHX1QUbIqptlSLnH+aOg" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.js" integrity="sha384-2b7KAxHmRxLZu0x5c6OMtaUOSns5VJ666Fe4F7u9OjRdY6SSEvFLVDxIV+u+/hYp" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.css" integrity="sha384-C9txWX+EICTgr4AN/wWQhKhdd/BsXl1lVS/E+daOWUZn6Mjm5oHGeEEU0jxP55oV" crossorigin="anonymous">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.6.1/galleria.min.js" integrity="sha512-vRKUU1GOjCKOTRhNuhQelz4gmhy6NPpB8N41c7a36Cxl5QqKeB9VowP8S7x8Lf3B8vZVURBxGlPpvyiRHh+CKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.6.1/themes/classic/galleria.classic.min.js" integrity="sha512-CXnDPXpM4UrG0VW6ZO7JxTmpYksq5lGw6bO1N7cmNnwGM6LrVvZnR1shSMov2sm8+kkMTMi+ZYqc8qK208eD2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.6.1/themes/classic/galleria-inline.classic.min.css" integrity="sha512-L5KYneni31pEQW9wqGR7bBZp/2sqOMVGbRLKjULOYUeGLpmeN0xlqF3OOVQ2asAN3H3Qj2UA1iYn03qCTSBuNQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 		<script src="index.js"></script>
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
-		<div class="galleria"></div>
+		<div id="galleria"></div>
 	</body>
 </html>
