Use --conflict replace. Deprecate --conflict override.

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -187,7 +187,7 @@
 					<tr>
 						<td><kbd class="option">--conflict</kbd></td>
 						<td><a href="forums/viewtopic.php?t=12891">conflict resolution</a></td>
-						<td><a href="forums/viewtopic.php?t=12891">skip | override | auto | index | fail</a></td>
+						<td><a href="forums/viewtopic.php?t=12891">skip | replace | auto | index | fail</a></td>
 					</tr>
 					<tr>
 						<td><kbd class="option">--filter</kbd></td>
