--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -874,11 +874,6 @@
 					<small class="comment">(e.g. &quot;1&quot; ➔ &quot;01&quot;)</small>
 				</p>
 				<p>
-					<code><kbd class="type">Number</kbd>.<kbd class="method">round</kbd>(<kbd class="numeral">precision</kbd>, <kbd class="string">padding</kbd> = <kbd class="string">"0"</kbd>)</code>
-					<a href="forums/viewtopic.php?t=194">Round decimal number</a> to precision.
-					<small class="comment">(e.g. &quot;3.14&quot; ➔ &quot;3.1&quot;)</small>
-				</p>
-				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">match</kbd>(<kbd class="regex">pattern</kbd>)</code>
 					Find and <a href="forums/viewtopic.php?t=12643">match a pattern</a>, or unwind if the given pattern cannot be found.
 				</p>
@@ -985,6 +980,21 @@
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">transliterate</kbd>(<kbd class="string">identifier</kbd>)</code>Apply any <a href="https://unicode-org.github.io/icu/userguide/transforms/general/#transliterator-identifiers">ICU script transliteration</a>.
 					<small class="comment">(e.g. &quot;中国&quot; ➔ &quot;zhōng guó&quot;)</small>
+				</p>
+				<p>
+					<code><kbd class="type">Number</kbd>.<kbd class="method">pad</kbd>(<kbd class="numeral">length</kbd>, <kbd class="string">padding</kbd> = <kbd class="string">"0"</kbd>)</code>
+					Pad to length using the given character.
+					<small class="comment">(e.g. &quot;1&quot; ➔ &quot;01&quot;)</small>
+				</p>
+				<p>
+					<code><kbd class="type">Number</kbd>.<kbd class="method">round</kbd>(<kbd class="numeral">precision</kbd>, <kbd class="string">padding</kbd> = <kbd class="string">"0"</kbd>)</code>
+					<a href="forums/viewtopic.php?t=194">Round decimal number</a> to precision.
+					<small class="comment">(e.g. 3.14 ➔ &quot;3&quot;)</small>
+				</p>
+				<p>
+					<code><kbd class="type">List</kbd>.<kbd class="method">joining</kbd>(<kbd class="string">delimiter</kbd>, <kbd class="string">prefix</kbd> = <kbd class="string">""</kbd>, <kbd class="string">suffix</kbd> = <kbd class="string">""</kbd>)</code>
+					Format a list of values.
+					<small class="comment">(e.g. [2001, 2002] ➔ &quot;(2001-2002)&quot;)</small>
 				</p>
 			</div>
 
