Add List.joining to the docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -993,7 +993,7 @@
 				</p>
 				<p>
 					<code><kbd class="type">List</kbd>.<kbd class="method">joining</kbd>(<kbd class="string">delimiter</kbd>, <kbd class="string">prefix</kbd> = <kbd class="string">""</kbd>, <kbd class="string">suffix</kbd> = <kbd class="string">""</kbd>)</code>
-					Format a list of values.
+					<a href="forums/viewtopic.php?t=13571">Format a list of values</a>.
 					<small class="comment">(e.g. [2001, 2002] ➔ &quot;(2001-2002)&quot;)</small>
 				</p>
 			</div>
