Match occurances of values enclosed in round brackets, square brackets or curly brackets.

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -949,13 +949,17 @@
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">replaceTrailingBrackets</kbd>(<kbd class="string">replacement</kbd> = <kbd class="string">""</kbd>)</code>
-					Replace trailing parenthesis.
+					Replace trailing round brackets.
 					<small class="comment">(e.g. &quot;The IT Crowd (UK)&quot; ➔ &quot;The IT Crowd&quot;)</small>
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">replacePart</kbd>(<kbd class="string">replacement</kbd> = <kbd class="string">""</kbd>)</code>
 					Replace trailing part number.
 					<small class="comment">(e.g. &quot;Today Is the Day (1)&quot; ➔ &quot;Today Is the Day, Part 1&quot;)</small>
+				</p>
+				<p>
+					<code><kbd class="type">String</kbd>.<kbd class="method">matchBrackets</kbd>()</code>
+					Match occurances of values enclosed in round brackets, square brackets or curly brackets.
 				</p>
 				<p>
 					<code><kbd class="type">String</kbd>.<kbd class="method">acronym</kbd>()</code>
